# iit-kyon-ros-pkg

./: CMakeLists.txt  GenerateDeb.cmake  GenerateXrdf.cmake  README.md  vision.rviz
kyon_cartesio/: CMakeLists.txt  package.xml
kyon_cartesio/config/: kyon.rviz  kyon_stack.yaml  kyon_stack_codesign.yaml  kyon_stack_man.yaml
kyon_cartesio/launch/: kyon.launch
kyon_config/: CMakeLists.txt  kyon_basic.yaml  package.xml
kyon_config/hal/: kyon_dummy.yaml  kyon_gz.yaml  kyon_mj.yaml
kyon_gazebo/: CMakeLists.txt  package.xml
kyon_gazebo/launch/: kyon_world.launch
kyon_gazebo/worlds/: kyon_man.world
kyon_manipulation/script/: arm1_homing.py  get_pose.py
kyon_mujoco/: CMakeLists.txt  package.xml
kyon_mujoco/config/: kyon.yaml  options.xml  sites.xml  world.xml
kyon_mujoco/launch/: kyon_world.launch
kyon_mujoco/src/: simulator_wrapper.bash
kyon_srdf/: CMakeLists.txt  package.xml
kyon_srdf/srdf/: kyon.srdf  kyon.srdf.xacro  kyon_capsule.srdf  kyon_leg.srdf  kyon_leg_wheel.srdf
kyon_urdf/: CMakeLists.txt  package.xml
kyon_urdf/capsule/: mesh_dagana-base.stl.capsule  mesh_dagana-clamp.stl.capsule  mesh_elbow.stl.capsule  mesh_foot-leg.stl.capsule  mesh_hip-pitch.stl.capsule  mesh_hip-roll.stl.capsule  mesh_pelvis.stl.capsule  mesh_sh-pitch.stl.capsule  mesh_sh-yaw.stl.capsule  mesh_wrist-pitch.stl.capsule  mesh_wrist-yaw.stl.capsule
kyon_urdf/config/: kyon.rviz
kyon_urdf/launch/: sliders.launch
kyon_urdf/meshes/: hip-roll.stl  mesh_ankle-yaw.stl  mesh_elbow.stl  mesh_fixed-wheel-leg.stl  mesh_foot-leg.stl  mesh_hip-pitch.stl  mesh_hip-roll.stl  mesh_knee-steering.stl  mesh_sh-pitch.stl  mesh_sh-yaw.stl  mesh_wheel-steering.stl  mesh_wheel.stl  mesh_wrist-pitch.stl  mesh_wrist-yaw.stl
kyon_urdf/meshes/collision/: mesh_ankle-yaw.stl  mesh_dagana-base.stl  mesh_dagana-clamp.stl  mesh_elbow.stl  mesh_fixed-wheel-leg.stl  mesh_foot-leg.stl  mesh_hip-pitch.stl  mesh_hip-roll.stl  mesh_knee-steering.stl  mesh_pelvis.stl  mesh_sh-pitch.stl  mesh_sh-yaw.stl  mesh_wheel-steering.stl  mesh_wheel.stl  mesh_wrist-pitch.stl  mesh_wrist-yaw.stl
kyon_urdf/urdf/: kyon.urdf  kyon.urdf.xacro  kyon_base.urdf.xacro  kyon_capsule.urdf  kyon_leg.urdf  kyon_leg.urdf.xacro  kyon_leg_wheel.urdf  kyon_robot.urdf.xacro
kyon_urdf/urdf/config/: kyon.urdf.xacro
kyon_urdf/urdf/gazebo/: ft_sensors.gazebo.xacro  kyon.gazebo.xacro  materials.gazebo.xacro  (+1 more)
(+11 files in other folders)
