<?xml version="1.0"?>
<package format="2">
  <name>kyon_cartesio</name>
  <version>0.0.0</version>
  <description>The kyon cartesio package</description>

  <maintainer email="luca.rossini@iit.it">Luca Rossini</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cartesian_interface</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
