<?xml version="1.0"?>
<package format="2">
  <name>kyon_config</name>
  <version>0.0.0</version>
  <description>The kyon config package</description>
  <maintainer email="luca.rossini@iit.it">Luca Rossini</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
