<?xml version="1.0"?>
<package format="2">
  <name>kyon_srdf</name>
  <version>0.0.0</version>
  <description>The kyon srdf package</description>

  <maintainer email="luca.rossini@iit.it">Luca Rossini</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>srdfdom</depend>
  <depend>urdf</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
